[project]
name = "crypto-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ccxt (>=4.4.80,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "fastapi-mcp (>=0.3.4,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "mcpauth (>=0.1.1,<0.2.0)",
    "fastmcp (>=2.10.2,<3.0.0)",
    "enums (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "crypto_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
